# django-migcare

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
migcare/: __init__.py  analysis.py  apps.py  backup.py  checks.py  conf.py  git_hooks.py  models.py  signals.py
migcare/management/commands/: migcare_backup.py  migcare_check.py  migcare_install_hooks.py  migcare_restore.py  safe_migrate.py
migcare/migrations/: 0001_initial.py
tests/: conftest.py  settings.py  test_analysis.py  test_backup.py  test_git_hooks.py  test_management.py
tests/testapp/: models.py
tests/testapp/migrations/: 0001_initial.py  0002_remove_legacy_tag.py
