[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-migcare"
version = "0.1.0"
description = "Prevents data loss during Django migration rollbacks and git branch switches"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["django", "migrations", "database", "safety", "backup", "rollback"]
authors = [{ name = "Tejas Ekhande" }]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]
dependencies = ["Django>=4.2"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-django>=4.9",
    "coverage>=7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["migcare*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["migcare"]
omit = ["migcare/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
